--- a/css/contact.css
+++ b/css/contact.css
@@ -75,28 +75,33 @@ main h2{
 	font-size: 3em;
 	font-family: 'Manjari', sans-serif ;
 	font-weight: bold;
-	padding-bottom: 100px;
+	padding-bottom: 10px;
+	text-align: center;
 }
 
 
 main p{
 	font-family: 'Khula', sans-serif;
+	font-size: large;
 }
 
 
-.contact-info{
-	display: flex;
-	align-items: center;
-	align-items: baseline;
+
+
+.map{
+	display: none;
 }
 
-.mapembed{
-	width: 10%;
-}
+
 
 /*======================================================================================================
 ==============================================FORM FIELD================================================
 ======================================================================================================*/
+.contact-info{
+	display: flex;
+	flex-direction: row;
+}
+
 
 #fullname{
 	width: 100%;
@@ -108,21 +113,32 @@ main p{
 
 #topic{
 	width: 100%;
-	height: 100px;
+	height: 150px;
 	resize: none;
 }
 
 #message{
 	width: 100%;
-	height: 100px;
+	height: 150px;
 	resize: none;
 }
 
-
+/*======================================================================================================
+================================================TABLE===================================================
+======================================================================================================*/
 
 table{
+	width: 100%;
 	font-family: 'Khula', sans-serif;
 }
+
+input, textarea{
+	padding: 10px;
+	margin-bottom: 15px;
+}
+
+
+
 
 
 
