--- a/css/contact.css
+++ b/css/contact.css
@@ -88,40 +88,31 @@ main p{
 
 
 
-.map{
-	display: none;
-}
+
 
 
 
 /*======================================================================================================
 ==============================================FORM FIELD================================================
 ======================================================================================================*/
-.contact-info{
-	display: flex;
-	flex-direction: row;
-}
 
 
-#fullname{
-	width: 100%;
-}
 
-#email{
-	width: 100%;
-}
 
 #topic{
-	width: 100%;
 	height: 150px;
 	resize: none;
 }
 
 #message{
-	width: 100%;
 	height: 150px;
 	resize: none;
 }
+
+.labeldiv{
+	order: 1;
+}
+
 
 /*======================================================================================================
 ================================================TABLE===================================================
