--- a/css/contact.css
+++ b/css/contact.css
@@ -54,7 +54,7 @@ table {
 
 body{
     background-color: #eda2d6;
-	max-width: 95%;
+	max-width: 75%;
 	margin: 0 auto;
 }
 
@@ -64,6 +64,73 @@ body{
 
 .container{
 	background-color: #EDD4A2;
+}
+
+/*======================================================================================================
+==============================================HEADER====================================================
+======================================================================================================*/
+
+.logo-plus-nav{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#contact-image{
+	max-width: 100%;
+	height: auto;
+	padding: 15px 0px 15px 0px;
+	overflow: hidden;
+}
+
+
+.topmenu{
+	width: 10%;
+	display: flex;
+	justify-content: space-evenly;
+	gap: 15px;
+	font-size: 1.5em;
+	font-family: 'Manjari', sans-serif ;
+}
+
+.call-to-action{
+	padding: 15px;
+}
+
+.appointment{
+	border: solid 2.5px #77408E;
+	background-color: #77408E;
+	color: whitesmoke;
+	padding: 5px 25px 5px 25px;
+	border-radius: 20px;
+	font-size: 30px;
+	width: 100%;
+	font-weight: lighter;
+}
+
+.appointment:hover{
+	font-weight: lighter;
+	color: #77408E;
+	background: #EDD4A2;
+	border: solid 2.5px #77408E;
+	width: 100%;
+	font-size: 30px;
+}
+
+
+
+
+.slogan{
+	text-align: center;
+	font-family: 'Manjari', sans-serif ;
+    font-size: 1.5em;
+}
+
+hr{
+	margin: 20px;
+	color: #77408E;
+	border: solid 2px;
 }
 
 
@@ -79,10 +146,23 @@ main h2{
 	text-align: center;
 }
 
+main h3{
+	font-size: 1.5em;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	font-family: 'Manjari', sans-serif ;
+
+}
+
 
 main p{
 	font-family: 'Khula', sans-serif;
-	font-size: large;
+	font-size: 1.5em;
+}
+
+.contact-message{
+	text-align: center;
+	padding-bottom: 15px;
 }
 
 
@@ -96,31 +176,66 @@ main p{
 ==============================================FORM FIELD================================================
 ======================================================================================================*/
 
+.form-field{
+	padding-bottom: 50px;
+}
+
+.contact-info{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	gap: 10px;
+}
 
 
+.fullname{
+	width: 100%;
+}
 
-#topic{
-	height: 150px;
+.email{
+	width: 100%;
+}
+
+.topic{
+	width: 100%;
+	height: 20px;
 	resize: none;
 }
 
-#message{
+.message{
+	width: 100%;
 	height: 150px;
 	resize: none;
 }
 
 .labeldiv{
-	order: 1;
+	padding-right: 30px;
+	padding-bottom: 29px;
 }
 
-
-/*======================================================================================================
-================================================TABLE===================================================
-======================================================================================================*/
-
-table{
+#sendbutton{
+	border: solid 2.5px #77408E;
+	background-color: #77408E;
+	color: whitesmoke;
+	margin-top: 10px;
+	padding: 5px 25px 5px 25px;
+	border-radius: 20px;
+	font-size: 30px;
 	width: 100%;
-	font-family: 'Khula', sans-serif;
+	font-weight: lighter;
+}
+
+#sendbutton:hover{
+	font-weight: lighter;
+	color: #77408E;
+	background: #EDD4A2;
+	border: solid 2.5px #77408E;
+	width: 100%;
+	font-size: 30px;
+}
+
+.map{
+	overflow: hidden;
 }
 
 input, textarea{
@@ -128,6 +243,89 @@ input, textarea{
 	margin-bottom: 15px;
 }
 
+
+/*======================================================================================================
+================================================TABLE===================================================
+======================================================================================================*/
+
+.bottom h3{
+	padding-bottom: 10px;
+	text-align: center;
+	font-family: 'Manjari', sans-serif;
+	font-size: 1.5em;
+	font-weight: 900;
+}
+
+.bottom{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	gap: 10px;
+}
+
+
+
+table{
+	font-family: 'Khula', sans-serif;
+	font-size: 1.5em;
+	text-align: center;
+}
+
+table td{
+	width: 12.5em;
+	border: #77408E solid 2.5px;
+	padding: 5px;
+}
+
+table tr th{
+	width: 12.5em;
+	border: #77408E solid 2.5px;
+	background-color: #77408E;
+	color: whitesmoke;
+	font-weight: bold;
+	padding: 5px;
+}
+
+.words{
+	text-align: center;
+}
+
+
+/*======================================================================================================
+===============================================FOOTER==================================================
+======================================================================================================*/
+#footer{
+	background-color: #77408E;
+	color: whitesmoke;
+	padding: 15px;
+}
+
+.footer-items{
+	display: flex;
+	justify-content: space-between;
+	gap: 15px;
+	padding-top: 20px;
+}
+
+.footer-items p{
+	font-size: 1.2em;
+	font-family: 'Manjari', sans-serif;	
+}
+
+#instagram, #twitter{
+	max-width: 3.5%;
+}
+
+#facebook{
+	max-width: 1.75%;
+}
+
+.logos{
+	padding: 15px;
+	display: flex;
+	justify-content: center;
+	gap: 25px;
+}
 
 
 
