--- a/css/aboutus-media.css
+++ b/css/aboutus-media.css
@@ -1,87 +1,61 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+#cakeshop{
+    width: 100%;
+}
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+#cakeshop{
+    transition-duration: .2s;
+    transition-delay: 100ms;  
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+.cc p{
+    font-family: 'Khula', sans-serif;
+    font-size: 1.5em;
+    padding-bottom: 5px;
 }
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+
+.cc p{
+    transition-duration: .2s;
+    transition-delay: 100ms;  
 }
 
 /*======================================================================================================
-============================================CODE START==================================================
+==============================================MEDIA====================================================
 ======================================================================================================*/
 
 
-body{
-    background-color: #eda2d6;
-	max-width: 100%;
-	margin: 0 auto;
+
+
+@media screen and (max-width: 1500px){
+
+    body{
+        color: crimson;
+    } 
+
+    .cc p{
+        max-width: 100%;
+        padding: 0px;
+        font-size: 1.2rem;
+    }
+
 }
 
-.cc{
-	padding: 20px;
-}
 
-.head{
-    background-color: #EDD4A2;
-    overflow: hidden;
-}
 
-.container{
-	background-color: #eda2d6;
-}
+
+
+
+
+@media screen and (max-width: 1250px){
+
+    body{
+        color: aqua;
+    }
 
 /*======================================================================================================
 ==============================================HEADER====================================================
 ======================================================================================================*/
 
-.logo-plus-nav{
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-    align-items: center;
-    padding: 20px 20px 0px 20px;
-}
+
 
 #mainbanner{
 	max-width: 100%;
@@ -90,11 +64,18 @@ body{
 	overflow: hidden;
 }
 
+#cakeshop{
+    width: 85%
+}
+
+
+
 
 .topmenu{
+    margin-right: 25px;
 	display: flex;
 	justify-content: space-evenly;
-    gap: 25px;
+    gap: 15px;
 	font-size: 1.5em;
     font-weight: bold;
 	font-family: 'Manjari', sans-serif ;
@@ -125,9 +106,10 @@ li:active{
 	border: solid 2.5px #77408E;
 	background-color: #77408E;
 	color: whitesmoke;
+    margin: 0px 15px 0px 15px;
 	padding: 5px 5px 5px 5px;
 	border-radius: 20px;
-	font-size: 30px;
+	font-size: 1.5em;
 	width: 100%;
 	font-weight: lighter;
 }
@@ -155,7 +137,6 @@ li:active{
 	font-family: 'Manjari', sans-serif ;
     font-size: 1.5em;
 }
-
 
 /*======================================================================================================
 ==============================================COTENT====================================================
@@ -191,45 +172,44 @@ main h3{
 
 
 .cc{
-    max-width: 75%;
+    max-width: 85%;
     margin: 0 auto;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    align-items: stretch;
-    row-gap: 50px;
-    column-gap: 25px;
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 15px;
 }
 
 
 .cc img{
-    width: 575px;
-    height: 550px;
+    width: 100%;
+    height: 750px;
 }
 
 .cc p{
     font-family: 'Khula', sans-serif;
 	font-size: 1.5em;
+    padding-bottom: 5px;
 }
+
+
+}
+
 
 /*======================================================================================================
 ===============================================FOOTER==================================================
 ======================================================================================================*/
-#footer{
-	background-color: #77408E;
-	color: whitesmoke;
-	padding: 15px;
-}
+
 
 .footer-items{
 	display: flex;
 	justify-content: space-between;
-	gap: 15px;
+	gap: 10px;
 	padding-top: 20px;
 }
 
 .footer-items p{
-	font-size: 1.2em;
+	font-size: 1em;
 	font-family: 'Manjari', sans-serif;	
 }
 
@@ -248,8 +228,35 @@ main h3{
 	gap: 25px;
 }
 
+
 /*======================================================================================================
-==============================================ANIMATIONS================================================
+===============================================SMALLER==================================================
 ======================================================================================================*/
 
 
+
+
+
+@media screen and (max-width: 900px){
+
+    .logo-plus-nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+        padding-bottom: 20px;
+    }
+
+    #cakeshop{
+        margin-left: 45px;
+    }
+
+    .topmenu{
+        margin-left: 65px;
+    }
+
+    
+
+    
+}
