--- a/css/contact.css
+++ b/css/contact.css
@@ -72,6 +72,11 @@ body{
 	background-color: #eda2d6;
 }
 
+a{
+	text-decoration: none;
+}
+
+
 /*======================================================================================================
 ==============================================HEADER====================================================
 ======================================================================================================*/
