--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -71,6 +71,11 @@ body{
 	background-color: #eda2d6;
 }
 
+a{
+	text-decoration: none;
+}
+
+
 /*======================================================================================================
 ==============================================HEADER====================================================
 ======================================================================================================*/
