--- a/css/home-media.css
+++ b/css/home-media.css
@@ -27,9 +27,6 @@
 
 @media screen and (max-width: 1500px){
 
-    body{
-        color: crimson;
-    } 
 
     .cc p{
         max-width: 100%;
@@ -47,9 +44,6 @@
 
 @media screen and (max-width: 1250px){
 
-    body{
-        color: aqua;
-    }
 
 /*======================================================================================================
 ==============================================HEADER====================================================
@@ -142,58 +136,15 @@ li:active{
 ==============================================COTENT====================================================
 ======================================================================================================*/
 
-#about-us{
-    font-size: 4.5em;
-    padding-top: 25px;
+.top{
+    display: flex;
+    flex-direction: column;
 }
 
-hr{
-	margin: 0px 20px 20px 20px;
-	color: #77408E;
-	border: solid 2px;
+.top img{
+    padding: none;
 }
 
-
-main h2{
-	font-size: 3em;
-	font-family: 'Manjari', sans-serif ;
-	font-weight: bold;
-	padding-bottom: 10px;
-	text-align: center;
-}
-
-
-main h3{
-	font-size: 3em;
-	font-family: 'Manjari thin', sans-serif ;
-	padding-bottom: 10px;
-	text-align: center;
-}
-
-
-.cc{
-    max-width: 85%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(1, 1fr);
-    row-gap: 15px;
-}
-
-
-.cc img{
-    width: 100%;
-    height: 750px;
-}
-
-.cc p{
-    font-family: 'Khula', sans-serif;
-	font-size: 1.5em;
-    padding-bottom: 5px;
-}
-
-
-}
 
 
 /*======================================================================================================
@@ -265,7 +216,6 @@ main h3{
 @media screen and (max-width: 800px){
 
     body{
-        color: aliceblue;
         max-width: 100%;
     }
 
