--- a/css/contact-media.css
+++ b/css/contact-media.css
@@ -146,7 +146,6 @@ li:active{
 }
 
 
-
 /*======================================================================================================
 ===============================================FOOTER==================================================
 ======================================================================================================*/
@@ -215,6 +214,17 @@ li:active{
         width: 100%;
         padding-bottom: 25px;
     }
+
+    .contact-info{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 25px;
+    }
+
+    .words{
+        display: none;
+    }
+    
 }
 
 
